--- a/WebApplication/Views/Home/Index.cshtml
+++ b/WebApplication/Views/Home/Index.cshtml
@@ -2,17 +2,47 @@
     ViewData["Title"] = "Home Page";
     string userType = ViewData["userType"].ToString();
     Layout = null;
+    
+    bool userLoggedIn = false;
+    if (ViewData["username"] != null)
+    {
+        string username = ViewData["username"].ToString();
+        userLoggedIn = true;
+    }
 }
 <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <link rel="stylesheet" type="text/css" href="~/css/rick.css">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"><title></title>
-    </head>
-    <body>
+<html lang="en">
+<head>
+    <title>@ViewData["Title"] - WebApplication</title>
+    <link rel="stylesheet" href="css/rick.css"/>
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/>
+</head>
+<body>
+<header>
+    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <div class="container">
+            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Student Rubrics</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+                <ul class="navbar-nav flex-grow-1">
 
-    
-
+                </ul>
+            </div>
+            @if (userLoggedIn)
+            {
+                <div class="float-right">
+                    <h4>Logged in as Andrei</h4>
+                </div>
+                <form class="form-inline" method="post" action="@Url.Action("Logout", "Login")">
+                    <button class="btn btn-success my-2 my-sm-0 ml-5" type="submit">Log out</button>
+                </form>
+            }
+        </div>
+    </nav>
+</header>
 @if (userType.Equals("student"))
 {
     <div class="split left">
@@ -23,35 +53,43 @@
         </div>
         <div class="split right">
             <div class="centered">
-                <button type="button" id="markedButton" class="btn btn-secondary actionButton" >Check how well you performed, and see how others rated you.</button>
+                <button type="button" id="markedButton" class="btn btn-secondary actionButton">Check how well you performed, and see how others rated you.</button>
             </div>
-        </div> 
+        </div>
     </div>
- @*     <div class="row mt-5"> *@
-@*         <div class="col"> *@
-@*             <div class="text-center"> *@
-@*                 <button type="button" class="btn btn-primary actionButton" onclick="location.href='@Url.Action("Items", "PendingItems", new {id = 2})'">Student</button> *@
-@*             </div> *@
-@*         </div> *@
-@*     </div> *@
 }
-else
-    if(userType.Equals("admin"))
+else if (userType.Equals("admin"))
 {
-@*     <div class="row mt-5"> *@
-@*         <div class="col"> *@
-@*             <div class="text-center"> *@
-@*                 <button type="button" class="btn btn-primary actionButton" onclick="location.href='@Url.Action("CreateRound", "Round", new {id = 2})'">Admin</button> *@
-@*             </div> *@
-@*         </div> *@
-@*     </div> *@
+    <div class="split left">
+        <div class="split left">
+            <div class="centered">
+                <button type="button" id="pendingButton" class="btn btn-secondary actionButton" onclick="location.href='@Url.Action("CreateRound", "Round", new {id = 2})'">Create a template for a round for students</button>
+            </div>
+        </div>
+        <div class="split right">
+            <div class="centered">
+                <button type="button" id="markedButton" class="btn btn-secondary actionButton">Delete users from the system</button>
+            </div>
+        </div>
+    </div>
 }
 else if (userType.Equals("teacher"))
 {
-    
+    <div class="split left">
+        <div class="split left">
+            <div class="centered">
+                <button type="button" id="pendingButton" class="btn btn-secondary actionButton" onclick="location.href='@Url.Action("SendRound", "Round", new {id = 2})'">Create a round for a specific group of students</button>
+            </div>
+        </div>
+        <div class="split right">
+            <div class="centered">
+                <button type="button" id="markedButton" class="btn btn-secondary actionButton">Create a group of student or transfer students from one group to another</button>
+            </div>
+        </div>
+    </div>
 }
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    </body>
-    </html>
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+</body>
+</html>
