--- a/WebApplication/Views/Round/SendRound.cshtml
+++ b/WebApplication/Views/Round/SendRound.cshtml
@@ -15,6 +15,8 @@
     <title>@ViewData["Title"] </title>
     <link rel="stylesheet" href="css/rick.css"/>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/>
+     <!--    This is used for all of the icons -->
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
 </head>
 <body>
 <header>
@@ -42,6 +44,27 @@
         </div>
     </nav>
 </header>
+<form>
+     <div class="form-group">
+        <p class="h1" style="padding: 2rem; margin-left: 45%;">Send To</p>
+         <select class="form-control" id="exampleFormControlSelect1" style="size: 12rem !important; margin-left: 45%; width: 12rem !important; ">
+             <option selected="selected">Select Group</option>
+             <option>Group 1</option>
+             <option>Group 2</option>
+             <option>Group 3</option>
+         </select>
+         <button type="button" class="btn btn-success" style="margin-left: 49%; margin-top: 2rem !important;"><span><i class="fas fa-plus-circle"></i></span></button>
+      </div>
+</form>
+
+
+
+
+
+
+
+
+
 
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
