--- a/WebApplication/Views/Shared/_Layout.cshtml
+++ b/WebApplication/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
             @if (userLoggedIn)
             {
                 <div class="float-right">
-                    <h4>Logged in as Andrei</h4>
+                    <h4>Logged in as @ViewData["username"]</h4>
                 </div>
                 <form class="form-inline" method="post" action="@Url.Action("Logout", "Login")">
                     <button class="btn btn-success my-2 my-sm-0 ml-5" type="submit">Log out</button>
