--- a/WebApplication/Views/PendingItems/Items.cshtml
+++ b/WebApplication/Views/PendingItems/Items.cshtml
@@ -4,14 +4,18 @@
 @{
     ViewData["Title"] = "Current pending items";
     Layout = "~/Views/Shared/_Layout.cshtml";
-    //get the rounds
+    //get the active rounds  rounds
     List<Round> allRounds = new List<Round>();
     string[] lines = System.IO.File.ReadAllLines(@"D:\data.txt");
     foreach (string line in lines)
     {
-        allRounds.Add(JsonConvert.DeserializeObject<Round>(line));
+        Round currentProcessRound = JsonConvert.DeserializeObject<Round>(line);
+        if (currentProcessRound.active)
+        {
+            allRounds.Add(currentProcessRound);
+        }
     }
-    
+
 }
 
 
@@ -19,7 +23,6 @@
 
 @foreach (Round round in allRounds)
 {
-   
     <div class="row mt-4">
         <!--Process all rounds-->
         <div class="col">
@@ -41,7 +44,7 @@
                     <p>Group member : <strong>Fabio</strong></p>
                     <p>Deadline <strong>@round.Deadline</strong></p>
                     <p class="card-text mt-3">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <button type="button" class="btn btn-primary btn-block" onclick="location.href='@Url.Action("CompleteForm", "StudentForm", new {id =  @round.roundID})'">Rate</button>
+                    <button type="button" class="btn btn-primary btn-block" onclick="location.href='@Url.Action("CompleteForm", "StudentForm", new {id = @round.roundID})'">Rate</button>
                 </div>
             </div>
         </div>
@@ -53,10 +56,9 @@
                     <p>Group member : <strong>Yourself</strong></p>
                     <p>Deadline <strong>@round.Deadline</strong></p>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <button type="button" class="btn btn-primary btn-block" onclick="location.href='@Url.Action("CompleteForm", "StudentForm", new {id =  @round.roundID})'">Rate</button>
+                    <button type="button" class="btn btn-primary btn-block" onclick="location.href='@Url.Action("CompleteForm", "StudentForm", new {id = @round.roundID})'">Rate</button>
                 </div>
             </div>
         </div>
     </div>
-        }
-   
+}
