--- a/WebApplication/Views/Round/SelectStudentsToSendRound.cshtml
+++ b/WebApplication/Views/Round/SelectStudentsToSendRound.cshtml
@@ -26,7 +26,7 @@
 <html lang="en">
 <head>
     <title>@ViewData["Title"] </title>
-    <link rel="stylesheet" href="css/rick.css"/>
+    <link rel="stylesheet" href="~/css/rick.css"/>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
 </head>
@@ -88,7 +88,7 @@
                     </tbody>
                 </table>
                 <!-- Modal -->
-                
+
                 <div class="modal fade" id="confirmationModal" tabindex="-1" role="dialog" aria-hidden="true">
                     <div class="modal-dialog" role="document">
                         <div class="modal-content">
@@ -108,25 +108,48 @@
                         </div>
                     </div>
                 </div>
+                <div class="button-group text-center">
+                    <button type="button" class="btn btn-default btn-sm dropdown-toggle" data-toggle="dropdown">
+                        <span class="glyphicon glyphicon-cog"></span> <span class="caret" style="font-size:20px;">Select Class</span>
+                    </button>
+                    <ul class="dropdown-menu dropdown-menu-select-class">
+                        <li>
+                            <input type="checkbox"
+                                   checked>
+                            <label for="scales">Scales</label>
+                        </li>
+                        <li>
+                            <input type="checkbox"
+                                   checked>
+                            <label for="scales">Scales</label>
+                        </li>
+                        <li>
+                            <input type="checkbox"
+                                   checked>
+                            <label for="scales">Scales</label>
+                        </li>
+                        <li>
+                            <input type="checkbox"
+                                   checked>
+                            <label for="scales">Scales</label>
+                        </li>
+                        <li>
+                            <input type="checkbox"
+                                   checked>
+                            <label for="scales">Scales</label>
+                        </li>
+                    </ul>
+                </div>
+                <div class="text-center">
+                    <button type="button" class="btn btn-primary mt-3" data-toggle="modal" data-target="#confirmationModal">Submit</button>
+                </div>
             </form>
 
-            <div class="form-group">
-                <div class="text-center">
-                    <select class="form-control" id="exampleFormControlSelect1" style="size: 12rem !important; width: 12rem !important; ">
-                        <option selected="selected">Select Group</option>
-                        <option>Group 1</option>
-                        <option>Group 2</option>
-                        <option>Group 3</option>
-                    </select>
-                    </div>
-            </div>
-            <div class="text-center">
-                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#confirmationModal">Submit</button>
-            </div>
         </div>
     </div>
-
 </div>
+
+<script src="js/customScript.js"></script>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
