--- a/WebApplication/Views/Home/Index.cshtml
+++ b/WebApplication/Views/Home/Index.cshtml
@@ -84,7 +84,7 @@ else if (userType.Equals("teacher"))
         </div>
         <div class="split right">
             <div class="centered">
-                <button type="button" id="markedButton" class="btn btn-secondary actionButton">Create a group of student or transfer students from one group to another</button>
+                <button type="button" id="markedButton" class="btn btn-secondary actionButton"  onclick="location.href='@Url.Action("SelectStudent", "Student")'">View the data of a particular student or a group</button>
             </div>
         </div>
     </div>
