--- a/WebApplication/Views/Student/SelectStudent.cshtml
+++ b/WebApplication/Views/Student/SelectStudent.cshtml
@@ -1,16 +1,26 @@
-﻿@{
-    Layout = null;
+﻿
+@{
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<!DOCTYPE html>
-
-<html>
-<head>
-    <title>title</title>
-</head>
-<body>
-<div>
-      
-</div>
-</body>
-</html>
+<form>
+<div class="form-group">
+    <label for="exampleFormControlSelect1">Select Class</label>
+    <select class="form-control" id="exampleFormControlSelect1">
+      <option>Maths</option>
+      <option>Romanian</option>
+      <option>Russian</option>
+      <option>Geography</option>
+    </select>
+  </div>
+    <div class="form-group">
+        <label for="exampleFormControlSelect1">Select Group</label>
+        <select class="form-control" id="exampleFormControlSelect1">
+            <option>Group 1</option>
+            <option>Group 2</option>
+            <option>Group 3</option>
+            <option>Group 4</option>
+            <option>Group 5</option>
+        </select>
+    </div>
+    <button type="button" class="btn btn-primary">Confirm</button>
+</form>
