--- a/WebApplication/Views/Student/SelectStudent.cshtml
+++ b/WebApplication/Views/Student/SelectStudent.cshtml
@@ -1,26 +1,55 @@
-﻿
+﻿@using Rubrics.Data
+
 @{
+    ViewData["Title"] = "Select Student From group";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    //get the data from the viewData dynamically
+
+    //mock some data for moment
+    List<StudentModel> students = new List<StudentModel>();
+    students.Add(new StudentModel() {StudentId = 1, FirstName = "Ricards", LastName = "Augustauskis"});
+    students.Add(new StudentModel() {StudentId = 2, FirstName = "Fabio", LastName = "Queiroz"});
+    students.Add(new StudentModel() {StudentId = 3, FirstName = "Andrei", LastName = "Avram"});
+    students.Add(new StudentModel() {StudentId = 1, FirstName = "Ricards", LastName = "Augustauskis"});
+    students.Add(new StudentModel() {StudentId = 2, FirstName = "Fabio", LastName = "Queiroz"});
+    students.Add(new StudentModel() {StudentId = 3, FirstName = "Andrei", LastName = "Avram"});
+
 }
-<form>
-<div class="form-group">
-    <label for="exampleFormControlSelect1">Select Class</label>
-    <select class="form-control" id="exampleFormControlSelect1">
-      <option>Maths</option>
-      <option>Romanian</option>
-      <option>Russian</option>
-      <option>Geography</option>
-    </select>
-  </div>
-    <div class="form-group">
-        <label for="exampleFormControlSelect1">Select Group</label>
-        <select class="form-control" id="exampleFormControlSelect1">
-            <option>Group 1</option>
-            <option>Group 2</option>
-            <option>Group 3</option>
-            <option>Group 4</option>
-            <option>Group 5</option>
-        </select>
+@for (int i = 0; i < students.Count; i++)
+{
+    <div class="row mt-4">
+        <!--Process all rounds-->
+        <div class="col">
+            <div class="card" style="width: 18rem;">
+                <div class="card-body">
+                    <h5 class="card-title">@students[0].FirstName + " "+ @students[0].LastName</h5>
+                    <p>Group member : <strong>Ricards</strong></p>
+                    <p class="card-text mt-3">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <button type="button" class="btn btn-primary btn-block" onclick="location.href='@Url.Action("Index", "Student")'">Select</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="col">
+            <div class="card" style="width: 18rem;">
+                <div class="card-body">
+                    <h5 class="card-title">(@students[1].FirstName + " "+ @students[1].LastName)</h5>
+                    <p>Group member : <strong>Fabio</strong></p>
+                    <p class="card-text mt-3">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <button type="button" class="btn btn-primary btn-block" onclick="location.href='@Url.Action("Index", "Student")'">Select</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="col">
+            <div class="card" style="width: 18rem;">
+                <div class="card-body">
+                    <h5 class="card-title">@students[2].FirstName + " "+ @students[2].LastName</h5>
+                    <p>Group member : <strong>Yourself</strong></p>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <button type="button" class="btn btn-primary btn-block"  onclick="location.href='@Url.Action("Index", "Student")'">Select</button>
+                </div>
+            </div>
+        </div>
     </div>
-    <button type="button" class="btn btn-primary">Confirm</button>
-</form>
+}
