--- a/WebApplication/Views/Student/Index.cshtml
+++ b/WebApplication/Views/Student/Index.cshtml
@@ -4,4 +4,52 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<div class="form-group row">
+    <label for="staticEmail" class="col-sm-2 col-form-label">Student ID: </label>
+    <div class="col-sm-10">
+        <input type="text" readonly class="form-control-plaintext" id="staticEmail" value="email@example.com">
+    </div>
+</div>
+<div class="form-group row">
+    <label for="staticEmail" class="col-sm-2 col-form-label">Firstname: </label>
+    <div class="col-sm-10">
+        <input type="text" readonly class="form-control-plaintext" id="staticEmail" value="email@example.com">
+    </div>
+</div>
+<div class="form-group row">
+    <label for="staticEmail" class="col-sm-2 col-form-label">Lastname: </label>
+    <div class="col-sm-10">
+        <input type="text" readonly class="form-control-plaintext" id="staticEmail" value="email@example.com">
+    </div>
+</div>
+<div class="form-group row">
+    <label for="staticEmail" class="col-sm-2 col-form-label">Date of Birth: </label>
+    <div class="col-sm-10">
+        <input type="text" readonly class="form-control-plaintext" id="staticEmail" value="email@example.com">
+    </div>
+</div>
+<div class="form-group row">
+    <label for="staticEmail" class="col-sm-2 col-form-label">Class Name: </label>
+    <div class="col-sm-10">
+        <input type="text" readonly class="form-control-plaintext" id="staticEmail" value="email@example.com">
+    </div>
+</div>
+<div class="form-group row">
+    <label for="staticEmail" class="col-sm-2 col-form-label">Group Number: </label>
+    <div class="col-sm-10">
+        <input type="text" readonly class="form-control-plaintext" id="staticEmail" value="email@example.com">
+        <button type="button" class="btn btn-primary">View Group</button>
+    </div>
+</div>
+<div class="form-group row">
+    <label for="staticEmail" class="col-sm-2 col-form-label">Average for </label>
+    <label for="staticEmail" class="col-sm-2 col-form-label" value=""></label>
+    <div class="col-sm-10">
+        <input type="text" readonly class="form-control-plaintext" id="staticEmail" value="email@example.com">
+    </div>
+</div>
+<div class="form-group row">
+     <button type="button" class="btn btn-primary">View Group</button>
+</div>
+
 
