--- a/WebApplication/Views/Student/Index.cshtml
+++ b/WebApplication/Views/Student/Index.cshtml
@@ -2,54 +2,50 @@
 @{
     ViewData["Title"] = "Student profile";
     Layout = "~/Views/Shared/_Layout.cshtml";
-}
-
-<div class="form-group row">
-    <label for="staticEmail" class="col-sm-2 col-form-label">Student ID: </label>
-    <div class="col-sm-10">
-        <input type="text" readonly class="form-control-plaintext" id="staticEmail" value="email@example.com">
+} 
+<link rel="stylesheet" href="~/css/rick.css"/>
+<div style="text-align: center !important;">
+<div class="card w-75">
+    <div class="card-body">
+        <h5 class="card-title">Student ID: </h5>
+        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
     </div>
 </div>
-<div class="form-group row">
-    <label for="staticEmail" class="col-sm-2 col-form-label">Firstname: </label>
-    <div class="col-sm-10">
-        <input type="text" readonly class="form-control-plaintext" id="staticEmail" value="email@example.com">
+<div class="card w-75">
+    <div class="card-body">
+        <h5 class="card-title">Firstname: </h5>
+        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
     </div>
 </div>
-<div class="form-group row">
-    <label for="staticEmail" class="col-sm-2 col-form-label">Lastname: </label>
-    <div class="col-sm-10">
-        <input type="text" readonly class="form-control-plaintext" id="staticEmail" value="email@example.com">
+<div class="card w-75">
+    <div class="card-body">
+        <h5 class="card-title">Surname: </h5>
+        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
     </div>
 </div>
-<div class="form-group row">
-    <label for="staticEmail" class="col-sm-2 col-form-label">Date of Birth: </label>
-    <div class="col-sm-10">
-        <input type="text" readonly class="form-control-plaintext" id="staticEmail" value="email@example.com">
+<div class="card w-75">
+    <div class="card-body">
+        <h5 class="card-title">Date of Birth: </h5>
+        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
     </div>
 </div>
-<div class="form-group row">
-    <label for="staticEmail" class="col-sm-2 col-form-label">Class Name: </label>
-    <div class="col-sm-10">
-        <input type="text" readonly class="form-control-plaintext" id="staticEmail" value="email@example.com">
+<div class="card w-75">
+    <div class="card-body">
+        <h5 class="card-title">Class Name: </h5>
+        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
     </div>
 </div>
-<div class="form-group row">
-    <label for="staticEmail" class="col-sm-2 col-form-label">Group Number: </label>
-    <div class="col-sm-10">
-        <input type="text" readonly class="form-control-plaintext" id="staticEmail" value="email@example.com">
-        <button type="button" class="btn btn-primary">View Group</button>
+<div class="card w-75">
+    <div class="card-body">
+        <h5 class="card-title">Group Number: </h5>
+        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
     </div>
 </div>
-<div class="form-group row">
-    <label for="staticEmail" class="col-sm-2 col-form-label">Average for </label>
-    <label for="staticEmail" class="col-sm-2 col-form-label" value=""></label>
-    <div class="col-sm-10">
-        <input type="text" readonly class="form-control-plaintext" id="staticEmail" value="email@example.com">
+    <div class="card w-75">
+        <div class="card-body">
+            <h5 class="card-title">Average: </h5>
+            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+        </div>
     </div>
+    <button type="button" class="btn btn-primary">Send E-mail</button>
 </div>
-<div class="form-group row">
-     <button type="button" class="btn btn-primary">View Group</button>
-</div>
-
-
