--- a/WebApplication/Views/Round/CreateRound.cshtml
+++ b/WebApplication/Views/Round/CreateRound.cshtml
@@ -3,7 +3,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <div class="text-center">
-    <h1>Create Rubric</h1>
+    <h1>Create Round</h1>
 </div>
 <form id="teacherTable" method="post" action="@Url.Action("SubmitRound", "Round")">
     <div class="input-group mb-3">
