--- a/WebApplication/Views/Student/Index.cshtml
+++ b/WebApplication/Views/Student/Index.cshtml
@@ -47,5 +47,5 @@
             <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
         </div>
     </div>
-    <button type="button" class="btn btn-primary">Send E-mail</button>
+   <a class="btn btn-primary" href = "mailto: avramandreitiberiu@gmail.com" role="button">Send email</a>
 </div>
