--- a/WebApplication/Views/Shared/CardPastRound.cshtml
+++ b/WebApplication/Views/Shared/CardPastRound.cshtml
@@ -7,6 +7,7 @@
     <div class="card" style="width: 18rem;">
         <div class="card-body">
             <h5 class="card-title text-center">@round.ModuleName</h5>
+            <p class="text-center"><strong>Deadline : @round.Deadline</strong></p>
             <!--Display the color of the card accordingly to the grade-->
             <div class="progress">
                 @{
