--- a/WebApplication/Views/Shared/CardStudent.cshtml
+++ b/WebApplication/Views/Shared/CardStudent.cshtml
@@ -5,7 +5,7 @@
     <div class="card" style="width: 18rem;">
         <div class="card-body">
             <h5 class="card-title text-center">@(student.FirstName + " " + student.LastName)</h5>
-            <button type="button" class="btn btn-primary btn-block" onclick="location.href='@Url.Action("Index", "Student")'">Select</button>
+            <button type="button" class="btn btn-primary btn-block" onclick="location.href='@Url.Action("Index", "Student",new {id = student.StudentId})'">Select</button>
         </div>
     </div>
 </div>
