--- a/WebApplication/Views/Home/Index.cshtml
+++ b/WebApplication/Views/Home/Index.cshtml
@@ -68,7 +68,7 @@ else if (userType.Equals("admin"))
         </div>
         <div class="split right">
             <div class="centered">
-                <button type="button" id="markedButton" class="btn btn-secondary actionButton">Delete users from the system</button>
+                <button type="button" id="markedButton" class="btn btn-secondary actionButton">Create a student account</button>
             </div>
         </div>
     </div>
