--- a/WebApplication/Views/Admin/CreateStudent.cshtml
+++ b/WebApplication/Views/Admin/CreateStudent.cshtml
@@ -5,3 +5,57 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<h1 class="text-center">Create Student</h1>
+<form style="padding: 2rem !important;">
+    <div class="form-row">
+      <div class="col">
+        <label for="formGroupExampleInput">First Name</label>
+        <input type="text" class="form-control" placeholder="First name">
+      </div>
+      <div class="col">
+        <label for="formGroupExampleInput">Last Name</label>
+        <input type="text" class="form-control" placeholder="Last name">
+      </div>
+      <div class="col">
+        <label for="inputGender">Gender</label>
+        <select id="inputGender" class="form-control">
+          <option selected>Gender</option>
+          <option>Male</option>
+          <option>Female</option>
+          <option>Other</option>
+        </select>
+      </div>
+    </div>
+    <div class="form-group">
+        <label for="formGroupExampleInput">Date Of Birth</label>
+        <input type="date" class="form-control" id="formGroupExampleInput" placeholder="Date Of Birth">
+      </div>
+      <div class="form-group">
+        <label for="formGroupExampleInput">E-Mail</label>
+        <input type="email" class="form-control" id="formGroupExampleInput" placeholder="E-Mail">
+      </div>
+      <hr style="border: 10px solid dodgerblue; border-radius: 5px;" aria-placeholder="Address">
+      <div class="form-group">
+        <label for="inputAddress">Address</label>
+        <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+      </div>
+      <div class="form-group">
+        <label for="inputAddress2">Address 2</label>
+        <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+      </div>
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <label for="inputCity">City</label>
+          <input type="text" class="form-control" id="inputCity">
+        </div>
+        <div class="form-group col-md-4">
+          <label for="inputState">Country</label>
+          <input type="text" class="form-control" id="inputCountry">
+        </div>
+        <div class="form-group col-md-2">
+          <label for="inputZip">Post Code</label>
+          <input type="text" class="form-control" id="inputPostCode">
+        </div>
+      </div>
+      <button type="submit" class="btn btn-primary">Create</button>
+  </form>
