done with this feature, not really

--- a/WebApplication/Views/Admin/CreateStudent.cshtml
+++ b/WebApplication/Views/Admin/CreateStudent.cshtml
@@ -1,5 +1,4 @@
-﻿@model TModel
-
+﻿
 @{
     ViewData["Title"] = "Create Student";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -34,7 +33,7 @@
         <label for="formGroupExampleInput">E-Mail</label>
         <input type="email" class="form-control" id="formGroupExampleInput" placeholder="E-Mail">
       </div>
-      <hr style="border: 10px solid dodgerblue; border-radius: 5px;" aria-placeholder="Address">
+      <hr class="page-separator-horizontal" aria-placeholder="Address">
       <div class="form-group">
         <label for="inputAddress">Address</label>
         <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
