--- a/WebApplication/wwwroot/css/rick.css
+++ b/WebApplication/wwwroot/css/rick.css
@@ -31,27 +31,40 @@
 }
 /* Split the screen in half */
 .split {
-    height: 100%;
+    height: 50%;
     width: 50%;
     position: fixed;
     z-index: -1;
-    top: 0;
     overflow-x: hidden;
     padding-top: 20px;
 }
 
 /* Control the left side */
-.left {
+.top-left {
+    top: 0;
     left: 0;
     background-color: lightgreen;
     z-index: -1;
 }
 
 /* Control the right side */
-.right {
+.top-right {
+    top:0;
     z-index: -1;
     right: 0;
     background-color: lightblue;
+}
+.bottom-left{
+    z-index: -1;
+    left: 0;
+    bottom: 0;
+    background-color: lightblue;
+}
+.bottom-right{
+    z-index: -1;
+    right: 0;
+    bottom: 0;
+    background-color: lightgreen;
 }
 
 /* If you want the content centered horizontally and vertically */
