--- a/WebApplication/Views/Admin/CreateStudent.cshtml
+++ b/WebApplication/Views/Admin/CreateStudent.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h1 class="text-center">Create Student</h1>
-<form style="padding: 2rem !important;" method="post" action="@Url.Action("SubmitStudentAccount", "Admin")">
+<form style="padding: 2rem !important;" onsubmit="areFieldsValueValid()" method="post" action="@Url.Action("SubmitStudentAccount", "Admin")">
     <div class="form-row">
       <div class="col">
         <label for="firstNameInputUser">First Name</label>
@@ -54,3 +54,4 @@
       </div>
       <button type="submit" class="btn btn-primary">Create</button>
   </form>
+<div class="alert alert-danger" role="alert" id="errorMessage" style="visibility: hidden"></div>
